modify info of footer and menu change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content=" " />
 
-    <title>DCS</title>
+    <title>Digital Communication System</title>
     <link rel="shortcut icon" href="backend/img/website/4tVjzISNWHWAW8iNPtla.png" />
 
     <!-- CSS Files -->    
@@ -32,7 +32,7 @@
                         <div class="header-bottom">
                             <nav class="main-menu">
                                 <ul class="main-menu-list">
-                                    <li class="menu-list-item"><a class="item-link" href="#about-section">About</a></li>
+                                    <li class="menu-list-item"><a class="item-link" href="#home-section">Home</a></li>
                                     <!-- <li class="menu-list-item"><a class="item-link" href="#vission-section">Vission</a></li>
                                     <li class="menu-list-item"><a class="item-link" href="#mission-section">Mission</a></li> -->
                                     <li class="menu-list-item"><a class="item-link" href="#profile-section">Profile</a>
@@ -150,9 +150,9 @@
 
 
 
-    <section id="about-section" class="py-md-5 py-4">
+    <section id="home-section" class="py-md-5 py-4">
         <div class="container">
-            <h2 class="sec-title mb-4">About Us</h2>
+            <h2 class="sec-title mb-4">Welcome to Digital Communication System (DCS)</h2>
             <div class="row g-4 align-items-center">
                 <div class="col-lg-6">
                     <div class="text text-lg-start text-center">
@@ -1356,7 +1356,7 @@
                                 <i class="fad fa-phone-rotary"></i>
                             </div>
                             <div class="cont">
-                                <p class="mb-0">+8801*********</p>
+                                <p class="mb-0">+8801711443212</p>
                             </div>
                         </div> <!-- single address -->
                     </li>
@@ -1366,7 +1366,7 @@
                                 <i class="fad fa-envelope-open"></i>
                             </div>
                             <div class="cont">
-                                <p class="mb-0"></p>
+                                <p class="mb-0">wcw1177@gmail.com</p>
                             </div>
                         </div> <!-- single address -->
                     </li>
@@ -1379,15 +1379,15 @@
         <div class="container">
             <div class="d-flex flex-md-row flex-column align-items-center justify-content-between">
                 <div class="flex-grow-1 text-md-start text-center">
-                    <p class="mb-0">Copyright © 2025 <a href="#">BSSBD</a> – All Right reserved!</p>
+                    <p class="mb-0">Copyright © 2025 <a href="#">DCS</a> – All Right reserved!</p>
                 </div>
                 <div class="flex-shrink-0 bg-white py-2 px-4 d-md-block d-none">
                     <img data-src="backend/img/website/EwPgcluT7lnbAGV9Kl2Z.png" height="50" alt="Logo"
                         class="lazyload">
                 </div>
                 <div class="flex-grow-1 text-md-end text-center">
-                    <p class="mb-0">Designed &amp; Developed by <a href="https://projanmoit.com/"
-                            target="_blank">ProjanmoIT</a></p>
+                    <p class="mb-0">Designed &amp; Developed by <a href="https://binarysoftbd.com/"
+                            target="_blank">BinarySoft</a></p>
                 </div>
             </div>
         </div>
@@ -1406,7 +1406,7 @@
         </div>
         <div class="mobile-menu-body">
             <ul class="mobile-menu-list">
-                <li class="list-item"><a class="menu-link" href="#about-section">About</a></li>
+                <li class="list-item"><a class="menu-link" href="#home-section">Home</a></li>
                 <li class="list-item"><a class="menu-link" href="#profile-section">Profile</a></li>
                 <li class="list-item"><a class="menu-link" href="#product-section">Product</a></li>
                 <li class="list-item"><a class="menu-link" href="#exibition-section">Exibition</a></li>
