--- a/product.html
+++ b/product.html
@@ -51,10 +51,10 @@
     </header>
 
     
-        <section id="home-section" class="py-md-5 py-4">
+    <section id="home-section" class="py-md-5 py-4">
         <div class="container">
             <h2 class="sec-title mb-4">
-                <img src="images/logo.jpg" alt="Logo" style="height:40px; margin-right:10px;">
+                <!-- <img src="images/logo.jpg" alt="Logo" style="height:40px; margin-right:10px;"> -->
                 Products
             </h2>
             <div class="row g-4 align-items-center">
@@ -70,8 +70,22 @@
             </div>
         </div>
     </section>
-    <!-- End About Area -->
-   
+
+    <!-- start OUR PARTNER -->
+
+     <section id="client-section" class="py-md-5 py-4 bg-no-repeat bg-cover position-relative z-1"
+        style="background-image: url(frontend\assets\images\gallery\2.jpg)">
+        <div class="absolute-full z--1"></div>
+        <div class="container">
+            <h2 class="sec-title mb-4">OUR PARTNER</h2>
+            <div class="carousel" data-items="4" data-xl-items="4" data-lg-items="3" data-sm-items="1" data-xs-items="1"
+                data-loop="true" data-autoplay="true" data-infinite="true" data-timeout="4000" id="partnerItem">
+
+                
+            </div>
+        </div>
+    </section>
+    <!-- End OUR PARTNER -->
 
     <footer class="bg-primary text-white py-md-0 py-2">
         <div class="container">
